# hello-word

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  ci.yml  public.yml
hello_word/: __init__.py
hello_world/: __init__.py
tests/: test_hello_world.py
