# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kolawole_hello_world"
version = "0.2.1"
description = "Read the latest Real Python tutorials"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]